[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/gui/iu.png" type="Texture" id=1]
[ext_resource path="res://fonts/BebasKai.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Control.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/intro.ogg" type="AudioStream" id=8]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Ubuntu-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.03967
margin_top = 3.77975
margin_right = -5.03967
margin_bottom = 171.78
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iu" type="Sprite" parent="."]
position = Vector2( 517.451, 297.678 )
scale = Vector2( 0.535951, 0.559108 )
texture = ExtResource( 1 )

[node name="game_button" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.22
margin_top = 221.48
margin_right = -232.22
margin_bottom = 314.48
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="options_button" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.22
margin_top = 325.48
margin_right = -232.22
margin_bottom = 418.48
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
text = "Options"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="quit_button" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -476.22
margin_top = 429.48
margin_right = -232.221
margin_bottom = 522.48
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="title _abel" type="Label" parent="."]
margin_left = 344.0
margin_top = 17.0
margin_right = 607.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0.741176, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "CYBER-RIDER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_button" type="Button" parent="."]
margin_left = 776.15
margin_top = 180.79
margin_right = 987.15
margin_bottom = 304.79
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicplayer" type="AudioStreamPlayer" parent="music_button"]
stream = ExtResource( 8 )

[connection signal="pressed" from="game_button" to="." method="_on_game_button_pressed"]
[connection signal="pressed" from="options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="music_button" to="music_button" method="_on_music_button_pressed"]
